--- a/index.html
+++ b/index.html
@@ -14,38 +14,47 @@
     </head>
     <body>
         <div class="sidebar">
-            <div class="dashboardlogo">Dashboard</div>
-            <div class="sidebar-links1">
-                <ul>Home</ul>
-                <ul>Profile</ul>
-                <ul>Messages</ul>
-                <ul>History</ul>
-                <ul>Tasks</ul>
-                <ul>Communities</ul>
+            <div class="dashboardlogo">
+              <img id="logo" src="https://img.icons8.com/external-kmg-design-detailed-outline-kmg-design/64/000000/external-dashboard-user-interface-kmg-design-detailed-outline-kmg-design.png"> 
+              Dashboard
             </div>
-            <div class="sidebar-links2">
-                <ul>Settings</ul>
-                <ul>Support</ul>
-                <ul>Privacy</ul>
+            <div class="sidebar-links-div">
+              <div class="sidebar-links1">
+                  <ul><img class="dashboardicons" id="home" src="https://img.icons8.com/ios-filled/50/000000/home.png"> Home</ul>
+                  <ul><img class="dashboardicons" id="profile" src="https://img.icons8.com/material/48/000000/user-male-circle--v1.png"> Profile</ul>
+                  <ul><img class="dashboardicons" id="messages" src="https://img.icons8.com/material/48/000000/topic--v1.png"/> Messages</ul>
+                  <ul><img class="dashboardicons" id="history" src="https://img.icons8.com/external-tal-revivo-bold-tal-revivo/48/000000/external-web-browsing-past-history-activity-timeline-tool-basic-bold-tal-revivo.png"/> History</ul>
+                  <ul><img class="dashboardicons" id="tasks" src="https://img.icons8.com/material/48/000000/tasks--v1.png"/>Tasks</ul>
+                  <ul><img class="dashboardicons" id="communities" src="https://img.icons8.com/material/48/000000/teamwork.png"/> Communities</ul>
+              </div>
+              <div class="sidebar-links2">
+                  <ul><img class="dashboardicons" id="settings" src="https://img.icons8.com/material/48/000000/settings--v5.png"/>Settings</ul>
+                  <ul><img class="dashboardicons" id="support" src="https://img.icons8.com/material/48/000000/help--v1.png"/>Support</ul>
+                  <ul><img class="dashboardicons" id="privacy" src="https://img.icons8.com/material/48/000000/privacy--v1.png"/>Privacy</ul>
+              </div>
             </div>
         </div>
 
         <div class="header">
             <div class="header-top">
                 <div class="searchbar-div">
-                    <div class="searchbar">searchbar</div>
+                  <input type="text" placeholder="🔎">
                 </div>
                 <div class="username-div">
-                    <div class="alert">alert</div>
-                    <div class="logo1">logo</div>
-                    <div class="username">Morgan Oakley</div>
+                    <div class="notification">
+                      <img id="bell" src="https://img.icons8.com/ios/50/000000/appointment-reminders--v2.png">
+                    </div>                   
+                    <div class="logo1">
+                      <img id="odin1" src="https://cdn.statically.io/gh/TheOdinProject/curriculum/5f37d43908ef92499e95a9b90fc3cc291a95014c/html_css/project-sign-up-form/odin-lined.png">
+                    </div>
+                    <div class="username">Odin McOdinson</div>
                 </div>
             </div>
             <div class="header-bottom">
-                <div class="headertext-div">
-                    <div class="logo2"></div>
-                    <div class="headertext">Hi there Morgan Oakley</div>
-                </div>
+                    <div class="logo2">
+                      <img id="odin2" src="https://cdn.statically.io/gh/TheOdinProject/curriculum/5f37d43908ef92499e95a9b90fc3cc291a95014c/html_css/project-sign-up-form/odin-lined.png"> 
+                    </div>
+                    <div class="headertext">Hi there Odin McOdinson</div>
                 <div class="button-div">
                     <button class="new">New</button>
                     <button class="upload">Upload</button>
@@ -55,16 +64,88 @@
         </div>
 
         <div class="main">
-            <div class="projects">
-                <div class="card">1</div>
-                <div class="card">2</div>
-                <div class="card">3</div>
-                <div class="card">4</div>
-                <div class="card">5</div>
-                <div class="card">6</div>
-            </div>
-            <div class="announcements">announcements</div>
-            <div class="trending">trending</div>
-        </div>
+              <div class="projects">
+                <div class="card">
+                  <div>PROJECT 1</div>
+                  <div id class="cardtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique et molestiae, ipsam iste praesentium pariatur, quisquam adipisci fuga vero quidem illo dolorum porro incidunt architecto, vel vitae! Odio, nisi repudiandae!
+                  </div>
+                  <div class="cardbuttons">
+                    <img src="https://img.icons8.com/ios-glyphs/30/000000/github.png">
+                    <img src="https://img.icons8.com/ios-glyphs/30/000000/share--v1.png">
+                  </div>
+                </div>
+                  <div class="card">
+                    <div>PROJECT 1</div>
+                    <div id class="cardtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique et molestiae, ipsam iste praesentium pariatur, quisquam adipisci fuga vero quidem illo dolorum porro incidunt architecto, vel vitae! Odio, nisi repudiandae!
+                    </div>
+                    <div class="cardbuttons">
+                      <img src="https://img.icons8.com/ios-glyphs/30/000000/github.png">
+                      <img src="https://img.icons8.com/ios-glyphs/30/000000/share--v1.png">
+                    </div>
+                  </div>
+                  <div class="card">
+                    <div>PROJECT 1</div>
+                    <div id class="cardtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique et molestiae, ipsam iste praesentium pariatur, quisquam adipisci fuga vero quidem illo dolorum porro incidunt architecto, vel vitae! Odio, nisi repudiandae!
+                    </div>
+                    <div class="cardbuttons">
+                      <img src="https://img.icons8.com/ios-glyphs/30/000000/github.png">
+                      <img src="https://img.icons8.com/ios-glyphs/30/000000/share--v1.png">
+                    </div>
+                  </div>
+                  <div class="card">
+                    <div>PROJECT 1</div>
+                    <div id class="cardtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique et molestiae, ipsam iste praesentium pariatur, quisquam adipisci fuga vero quidem illo dolorum porro incidunt architecto, vel vitae! Odio, nisi repudiandae!
+                    </div>
+                    <div class="cardbuttons">
+                      <img src="https://img.icons8.com/ios-glyphs/30/000000/github.png">
+                      <img src="https://img.icons8.com/ios-glyphs/30/000000/share--v1.png">
+                    </div>
+                  </div>
+                  <div class="card">
+                    <div>PROJECT 1</div>
+                    <div id class="cardtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique et molestiae, ipsam iste praesentium pariatur, quisquam adipisci fuga vero quidem illo dolorum porro incidunt architecto, vel vitae! Odio, nisi repudiandae!
+                    </div>
+                    <div class="cardbuttons">
+                      <img src="https://img.icons8.com/ios-glyphs/30/000000/github.png">
+                      <img src="https://img.icons8.com/ios-glyphs/30/000000/share--v1.png">
+                    </div>
+                  </div>
+                  <div class="card">
+                    <div>PROJECT 1</div>
+                    <div id class="cardtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique et molestiae, ipsam iste praesentium pariatur, quisquam adipisci fuga vero quidem illo dolorum porro incidunt architecto, vel vitae! Odio, nisi repudiandae!
+                    </div>
+                    <div class="cardbuttons">
+                      <img src="https://img.icons8.com/ios-glyphs/30/000000/github.png">
+                      <img src="https://img.icons8.com/ios-glyphs/30/000000/share--v1.png">
+                    </div>
+                  </div>
+              </div>
+              <div class="announcements">
+                <div class="announcementsheader">ANNOUNCEMENTS</div>
+                <div class="announcement">Lorem ipsum 1</div>
+                <div class="announcement">Lorem ipsum 2</div>
+                <div class="announcement">Lorem ipsum 3</div>
+              </div>
+
+              <div class="trending">
+                <div class="trendingheader">TRENDING</div>
+                <div class="trending1">
+                  <img class="trendingicons" src="https://img.icons8.com/stickers/100/000000/trollface.png"/>
+                  @trollface
+                </div>
+                <div class="trending2">
+                  <img class="trendingicons" src="https://img.icons8.com/officel/80/000000/scared-face-meme.png"/>
+                  @yao
+                </div>
+                <div class="trending3">
+                  <img class="trendingicons" src="https://img.icons8.com/fluency/50/000000/doge.png"/>
+                  @doge
+                </div>
+                <div class="trending4">
+                  <img class="trendingicons" src="https://img.icons8.com/fluency/48/000000/monkas.png"/>
+                    @monkaS
+                </div>
+              </div>
+          </div>
     </body>
 </html>
